tests/ui/rfcs/rfc-2093-infer-outlives/nested-regions.rs
#![feature(rustc_attrs)]

#[rustc_dump_inferred_outlives]
struct Foo<'a, 'b, T> { //~ ERROR rustc_dump_inferred_outlives
    x: &'a &'b T
}

fn main() {}
